# Serialink

./: CMakeLists.txt  Doxyfile  README.md
cmake/: Packing.cmake
examples/: main-proxy.cpp  main-usb-serial.cpp  main-virtual.cpp  main.cpp
examples/framed-serial-protocol/include/: data-formating.hpp
examples/framed-serial-protocol/src/: data-formating.cpp  main.cpp
include/: serial.hpp  serialink.hpp  usb-serial.hpp  virtual-proxy.hpp  virtuser.hpp
src/: serial.cpp  serialink.cpp  usb-serial.cpp  virtual-proxy.cpp  virtuser.cpp
test/: test-framed-data.cpp  test-simple.cpp
